--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -61,6 +61,13 @@ sections:
   label: Testimonials
   templates:
   - testimonials
+- type: document
+  path: _data/produtos.json
+  label: Produtos
+  create: all
+  match: "**/*"
+  templates:
+  - produtos
 - type: directory
   path: products
   label: Product
